; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_sid.c_kuhl_m_sid_query.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_sid.c_kuhl_m_sid_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i32] [i32 115, i32 121, i32 115, i32 116, i32 101, i32 109, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_sid_query(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32**, i32*** %4, align 8
  %10 = call i32 @kull_m_string_args_byName(i32 %8, i32** %9, i8* bitcast ([7 x i32]* @.str to i8*), i32** %7, i32* null)
  %11 = load i32, i32* %3, align 4
  %12 = load i32**, i32*** %4, align 8
  %13 = load i32, i32* @FALSE, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = call i64 @kuhl_m_sid_quickSearch(i32 %11, i32** %12, i32 %13, i32* %14, i32* %5, i32** %6)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %2
  %18 = load i32*, i32** %6, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @ldap_msgfree(i32* %21)
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @ldap_unbind(i32 %24)
  br label %26

26:                                               ; preds = %23, %2
  %27 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %27
}

declare dso_local i32 @kull_m_string_args_byName(i32, i32**, i8*, i32**, i32*) #1

declare dso_local i64 @kuhl_m_sid_quickSearch(i32, i32**, i32, i32*, i32*, i32**) #1

declare dso_local i32 @ldap_msgfree(i32*) #1

declare dso_local i32 @ldap_unbind(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
